feat: add routes + cookieAuth
